--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-<h1>welcome</a>,my name is Jian Li.</h1>
+<h1>welcome</a>,my name is Haiwu Liu.</h1>
 <ul>
     <li><a href="实验一.html" target="_blank">实验一</a></li>
     
