--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="nav">
 	<div class="menu">
 		<ul>
-			<li><a href="#" >实验一.html</a>
+			<li><a href="#" >实验一</a>
 				<ul class="sub">
 				<li><a href="sy1-1.html">sy1-1</a></li>	
 				<li><a href="sy1-2.html">sy1-2</a></li>
