--- a/sy2-2.html
+++ b/sy2-2.html
@@ -3,46 +3,47 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>sy2-2.html</title>
+<title>活动报名季度数据报表</title>
 </head>
 
 <body>
-<table width="500" border="10">
-	<caption>活动报名季度数据报表</caption>
+<h2 style="text-align: center">活动报名季度数据报表</h1>
+<table  align="center" width="600" border="10" bordercolorlight="#F0F0F0" bordercolordark="#A0A0A0" >
+	
 	<thead style="background: #0af">
-		<tr>
-			<th>季度</th>
-			<th>人数</th>
-		</tr>
+	<tr >
+	<th>季度</th>
+	<th>人数</th>
+	</tr>
 	</thead>
-	<tbody style="background: #6cc">
-		<tr>
-			<th>一季度</th>
-			<th>16100</th>
-		</tr>
-		<tr>
-			<th>二季度</th>
-			<th>14500</th>
-		</tr>
-		<tr>
-			<th>三季度</th>
-			<th>18000</th>
-		</tr>
-		<tr>
-			<th>四季度</th>
-			<th>14200</th>
-		</tr>
+	<tbody bgcolor="#66CCCC">
+	<tr >
+	<td>一季度</td>
+	<td>16100</td>
+	</tr>
+	<tr >
+	<td>二季度</td>
+	<td>14500</td></tr>
+	<tr >
+	<td>三季度</td>
+	<td>18000</td>
+	</tr>
+	<tr >
+	<td>四季度</td>
+	<td>14200</td>
+	</tr>
 	</tbody>
-	<tfoot style="background: #ff6">
-		<tr>
-			<td>季度平均报名人数</td>
-			<td>15700</td>
-		</tr>
-		<tr>
-			<td>总计</td>
-			<td>62800</td>
-		</tr>
+	<tfoot bgcolor="#FFFF66">
+	<tr >
+	<td>季度平均报名人数</td>
+	<td>15700</td>
+	</tr>
+	<tr >
+	<td>总计</td>
+	<td>62800</td>
+	</tr>
 	</tfoot>
 </table>
+	
 </body>
 </html>
