--- a/sy2-3.html
+++ b/sy2-3.html
@@ -30,7 +30,7 @@
 			<td align="center"><img src="推荐菜谱/毛氏红烧肉.jpg" width="200" height="130" alt="毛氏红烧肉" title="毛氏红烧肉"/></td>
 			<td align="center"><img src="推荐菜谱/杀猪菜.jpg" width="200" height="130" alt="杀猪菜" title="杀猪菜"/></td>
 			<td align="center"><img src="推荐菜谱/西红柿炒鸡蛋.jpg" width="200" height="130" alt="西红柿炒鸡蛋" title="西红柿炒鸡蛋"/></td>
-			<td align="center"><img src="推荐菜谱/莲藕排骨汤.jpeg" width="200" height="130" alt="莲藕排骨汤" title="莲藕排骨汤"/></td>
+			<td align="center"><img src="推荐菜谱/莲藕排骨汤.jpg" width="200" height="130" alt="莲藕排骨汤" title="莲藕排骨汤"/></td>
 		</tr>
 		<tr>
 			<td width="200" height="30" align="center">毛氏红烧肉</td>
