--- a/sy3-4.html
+++ b/sy3-4.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>实验三.4</title>
+<title>sy3-4</title>
 <style type="text/css">
 	table{
 		border:1px solid#000000;
