--- a/sy3-6.html
+++ b/sy3-6.html
@@ -72,13 +72,13 @@
 <body>
     <dl>
         <dt><a href="#"><img src="风景/田园风光.jpg" alt=""><strong>田园风光<br>世外桃源的生活</strong><span>会员价： &yen;<em>8000</em></span></a></dt>
-        <dt><a href="#"><img src="风景/海天一色.jpg" alt=""><strong>度假型酒店<br>放松身心，释放压力</strong><span>会员价： &yen;<em>10000</em></span></a></dt>
-        <dt><a href="#"><img src="风景/北欧风情.jpg" alt=""><strong>主题型酒店<br>将服务项目融入主题</strong><span>会员价： &yen;<em>6000</em></span></a></dt>
-        <dt><a href="#"><img src="风景/南极风采.jpg" alt=""><strong>长住型酒店<br>采取家庭式结构</strong><span>会员价： &yen;<em>5800</em></span></a></dt>
-        <dt><a href="#"><img src="风景/田园风光.jpg" alt=""><strong>会议型酒店<br>有较为完善的会议服务设施</strong><span>会员价： &yen;<em>8000</em></span></a></dt>
-        <dt><a href="#"><img src="风景/海天一色.jpg" alt=""><strong>经济型酒店<br>实现住宿者和商家互利</strong><span>会员价： &yen;<em>10000</em></span></a></dt>
-        <dt><a href="#"><img src="风景/北欧风情.jpg" alt=""><strong>连锁酒店<br>有全国统一的品牌形象</strong><span>会员价： &yen;<em>6000</em></span></a></dt>
-        <dt><a href="#"><img src="风景/南极风采.jpg" alt=""><strong>公寓式酒店<br>相当于个人的“临时住宅”</strong><span>会员价： &yen;<em>5800</em></span></a></dt>
+        <dt><a href="#"><img src="风景/海天一色.jpg" alt=""><strong>海天一色<br>心旷神怡的景观</strong><span>会员价： &yen;<em>10000</em></span></a></dt>
+        <dt><a href="#"><img src="风景/北欧风情.jpg" alt=""><strong>北欧风情<br>流连忘返的邂逅</strong><span>会员价： &yen;<em>6000</em></span></a></dt>
+        <dt><a href="#"><img src="风景/南极风采.jpg" alt=""><strong>南极风采<br>没有烦恼的世界</strong><span>会员价： &yen;<em>5800</em></span></a></dt>
+        <dt><a href="#"><img src="风景/田园风光.jpg" alt=""><strong>田园风光<br>世外桃源的生活</strong><span>会员价： &yen;<em>8000</em></span></a></dt>
+        <dt><a href="#"><img src="风景/海天一色.jpg" alt=""><strong>海天一色<br>心旷神怡的景观</strong><span>会员价： &yen;<em>10000</em></span></a></dt>
+        <dt><a href="#"><img src="风景/北欧风情.jpg" alt=""><strong>北欧风情<br>流连忘返的邂逅</strong><span>会员价： &yen;<em>6000</em></span></a></dt>
+        <dt><a href="#"><img src="风景/南极风采.jpg" alt=""><strong>南极风采<br>没有烦恼的世界“临时住宅”</strong><span>会员价： &yen;<em>5800</em></span></a></dt>
     </dl>
 </body>
 </html>
