--- a/sy4-2.html
+++ b/sy4-2.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head> <title>sy4-2</title>
-<meta charset="gb2312">
+<meta charset="utf-8">
 <link rel="stylesheet" href="../css/style.css" type="text/css" >
 </head>
 <body>
