--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 			<li>
 			<a href="#">实验五</a>
 					<ul class="sub">
-					<li><a href="sy5-1.html">sy5-1</a></li>
-					<li><a href="sy5-2.html">sy5-2</a></li>
+					<li><a href="sy5.html">sy5-1</a></li>
 					</ul>
 			
 			</li>
