--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<li>
 			<a href="#">实验五</a>
 					<ul class="sub">
-					<li><a href="sy5.html">sy5-1</a></li>
+					<li><a href="sy5.html">sy5</a></li>
 					</ul>
 			
 			</li>
