--- a/sy4-2.html
+++ b/sy4-2.html
@@ -2,8 +2,8 @@
 <!doctype html>
 <html>
 <head> <title>sy4-2</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="../css/style.css" type="text/css" >
+<meta charset="gb2312">
+<link rel="stylesheet" href="css/style.css" type="text/css" >
 </head>
 <body>
 <div id="top_bg">
