--- a/sy4-2.html
+++ b/sy4-2.html
@@ -3,7 +3,7 @@
 <html>
 <head> <title>sy4-2</title>
 <meta charset="gb2312">
-<link rel="stylesheet" href="css/sy4-2.css" type="text/css" >
+<link rel="stylesheet" href="css/style.css" type="text/css" >
 </head>
 <body>
 <div id="top_bg">
