--- a/sy8.html
+++ b/sy8.html
@@ -47,7 +47,7 @@
 
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
-                <a href="#"><em>张赞的个人主页</em></a>
+                <a href="#"><em>刘海武的个人主页</em></a>
             </div>
             <nav>
                 <ul>
@@ -161,7 +161,7 @@
             <section id="featured" class="content-section">
                 <div class="section-heading">
                     <h1>self-introduction<br><em>自我介绍</em></h1>
-                    <p>2001年03月03日
+                    <p>2003年06月09日
                     <br>isfp 是个双子座捏</p>
                 </div>
                 <div class="section-content">
@@ -177,8 +177,8 @@
                                 <h4>我的家乡</h4>
                                 <span>——江西省南昌市</span>
                                 <p>一直在故乡没离开过捏，不懂乡愁为何滋味。
-
-南昌只有冬夏，春秋都留在战国时期了，这样说只是让我们更加珍惜南昌一年中少见的舒适天气。</p>
+					
+	南昌只有冬夏，春秋都留在战国时期了，这样说只是让我们更加珍惜南昌一年中少见的舒适天气。</p>
                             </div>
                         </div>
                         <div class="item">
