--- a/sy8.html
+++ b/sy8.html
@@ -304,7 +304,7 @@
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h1>视频分享</h1>
-                            <p>我分享的视频是宇宙星空，个人比较喜欢宇航员和星空类的视频</p>
+                            <p>黑夜中我们迎着寒风奔跑，幸而有彼此陪伴着身旁</p>
                         </div>
                         <div class="text-content">
                             <p>(点击视频就会播放，再次点击就会暂停，双击可放大)</p>
@@ -317,7 +317,7 @@
                         <div class="box-video">
                             <div class="bg-video">
 								<video controls>
-  <source src="video/星空背景.mp4" type="video/mp4">
+  <source src="img/闯红灯.mp4" type="video/mp4">
 </video>
                             </div>
                             <div class="video-container" style="height: 400px;">
@@ -330,8 +330,8 @@
             <section id="blog" class="content-section">
                 <div class="section-heading">
                     <h1>个人目标</h1>
-                    <p>没有目标，哪来的劲头？ 
-                    <br>没有目标，就会迷失自己！</p>
+                    <p>目标指引我们前进的方向
+                    <br>目标是我们对未来的希冀</p>
                 </div>
                 <div class="section-content">
                     <div class="tabs-content">
@@ -339,8 +339,10 @@
                             <ul class="tabs clearfix" data-tabgroup="first-tab-group">
                               <li><a href="#tab1">期末不挂科</a></li>
                               <li><a href="#tab2">确定自己未来一年的努力方向</a></li>
+			      <li><a href="#tab3">看邓紫棋演唱会</a></li>
+			      <li><a href="#tab1">变得自信</a></li>
                             </ul>
-                                <div id="tab">
+                                <div id="tab1">
                                     <ul>
                                         <li>
                                             <div class="item">
@@ -372,6 +374,38 @@
                                         </li>
                                     </ul>
                                 </div>
+				 <div id="tab3">
+                                    <ul>
+                                        <li>
+                                            <div class="item">
+                                                <img src="img/blog_4.jpg" alt="">
+                                                <div class="text-content">
+                                                    <h4>看邓紫棋演出会</h4>
+                                                    <p>为了证明自己不是个假粉丝</p>
+                                                    <div class="accent-button button">
+                                                        <a href="#contact">Continue Reading</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+				<div id="tab4">
+                                    <ul>
+                                        <li>
+                                            <div class="item">
+                                                <img src="img/blog_5.jpg" alt="">
+                                                <div class="text-content">
+                                                    <h4>变得自信</h4>
+                                                    <p>接受自己的不完美，拥抱那真实的自己</p>
+                                                    <div class="accent-button button">
+                                                        <a href="#contact">Continue Reading</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </section> 
                         </div>
                     </div>
@@ -391,12 +425,12 @@
                             <div class="row">
                                 <div class="col-md-4">
                                   <fieldset>
-                                    <input name="name" type="text" class="form-control" id="name" value="emile:1585109006@qq.com">
+                                    <input name="name" type="text" class="form-control" id="name" value="emile:3253913688@qq.com">
                                   </fieldset>
                                 </div>
                                 <div class="col-md-4">
                                   <fieldset>
-                                    <input name="email" type="email" class="form-control" id="email" value="phone:13400325384">
+                                    <input name="email" type="email" class="form-control" id="email" value="phone:15079078076">
                                   </fieldset>
                                 </div>
                                  <div class="col-md-4">
@@ -480,7 +514,7 @@
 </style>
 <div>
 	<audio preload="none" autoplay="autoplay" loop="loop" >
- 	 	<source src="video/音乐人胖可 - 星空下.mp3" type="audio/mp3">
+ 	 	<source src="/张悬 - 关于我爱你.mp3" type="audio/mp3">
 	</audio>
 </div>
 </body>
