--- a/sy8.html
+++ b/sy8.html
@@ -514,7 +514,7 @@
 </style>
 <div>
 	<audio preload="none" autoplay="autoplay" loop="loop" >
- 	 	<source src=img/张悬 - 关于我爱你.mp3" type="audio/mp3">
+ 	 	<source src="img/张悬 - 关于我爱你.mp3" type="audio/mp3">
 	</audio>
 </div>
 </body>
