--- a/sy8.html
+++ b/sy8.html
@@ -109,6 +109,7 @@
                 <!-- Item -->
                 <div class="item item-1">
                     <div class="img-fill">
+			    <div class="image" style="background-image: url("img/slide_1.jpg");"></div>
                     <div class="image"></div>
                     <div class="info">
                         <div>
