--- a/sy8.html
+++ b/sy8.html
@@ -305,7 +305,7 @@
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h1>视频分享</h1>
-                            <p>黑夜中我们迎着寒风奔跑，幸而有彼此陪伴着身旁</p>
+                            <p>黑夜中我们迎着寒风奔跑，幸而有彼此陪伴在身旁</p>
                         </div>
                         <div class="text-content">
                             <p>(点击视频就会播放，再次点击就会暂停，双击可放大)</p>
@@ -381,7 +381,7 @@
                                             <div class="item">
                                                 <img src="img/blog_4.jpg" alt="">
                                                 <div class="text-content">
-                                                    <h4>看邓紫棋演出会</h4>
+                                                    <h4>看邓紫棋演唱会</h4>
                                                     <p>为了证明自己不是个假粉丝</p>
                                                     <div class="accent-button button">
                                                         <a href="#contact">Continue Reading</a>
