--- a/sy8.html
+++ b/sy8.html
@@ -244,7 +244,7 @@
                             <div class="text-content">
                                 <h4>我喜欢的歌星</h4>
                                 <span>——焦安溥、邓紫棋</span>
-                                <p>感谢她们的歌声陪我度过生命中寂寥，落寞的时刻， yyds!</p>
+                                <p>感谢她们的歌声陪我度过生命中寂寥，落寞的时刻</p>
                             </div>
                         </div>
                         <div class="item">
