--- a/sy3-3.html
+++ b/sy3-3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>sy3-3</title>.3</title>
+<title>sy3-3</title>3</title>
 <style type="text/css">
 	.test a:link{
 		color:#666;
