--- a/sy8.html
+++ b/sy8.html
@@ -191,7 +191,7 @@
                             </div>
                             <div class="text-content">
                                 <h4>我的大学</h4>
-                                <span>——江西省南昌市</span>
+                                <span>——华东交通大学</span>
                                 <p>华东交通大学——枯藤，老树，昏鸦…学校，不让，回家…英语，高数，要挂…气温不下，断肠人，热死在，华东交大… </p>
                             </div>
                         </div>
