--- a/sy4-2.html
+++ b/sy4-2.html
@@ -1,10 +1,9 @@
-
 <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
 <title>sy4-2</title>
-<link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
