--- a/sy4-2.html
+++ b/sy4-2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>sy4-2</title>
-<link href="css/style.css" rel="stylesheet" type="text/css"/>
+<link href="css/sy4-2.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
