--- a/sy4-2.html
+++ b/sy4-2.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>sy4</title>
 </head>
-<link href="sy4.css" rel="stylesheet" type="text/css" />
+<link href="css/sy4-2.css" rel="stylesheet" type="text/css" />
 <body>
 <div id="top_bg">
   <div id="container">
