--- a/sy4-2.html
+++ b/sy4-2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>sy4</title>
+<title>sy4-2</title>
 </head>
 <link href="css/sy4-2.css" rel="stylesheet" type="text/css" />
 <body>
