--- a/sy8.html
+++ b/sy8.html
@@ -249,7 +249,7 @@
                         </div>
                         <div class="item">
                             <div class="image">
-                                <img src="img/featured_7.jpg" alt="">
+                                <img src="小熊猫.jpg" alt="">
                                 <div class="featured-button button">
                                     <a href="#projects">Continue Reading</a>
                                 </div>
