--- a/sy8.html
+++ b/sy8.html
@@ -318,7 +318,7 @@
                         <div class="box-video">
                             <div class="bg-video">
 								<video controls>
-  <source src="img/闯红灯.mp4" type="video/mp4">
+  <source src="闯红灯.mp4" type="video/mp4">
 </video>
                             </div>
                             <div class="video-container" style="height: 400px;">
