--- a/sy8.html
+++ b/sy8.html
@@ -110,6 +110,8 @@
                 <div class="item item-1">
                     <div class="img-fill">
 			    <div class="image" style="background-image: url("img/slide_2.jpg");"></div>
+			    <div class="image" style="background-image: url("slide_2.jpg");"></div>
+			    <div class="image" style="background-image: url("slide_1.jpg");"></div>
                     <div class="image"></div>
                     <div class="info">
                         <div>
@@ -169,7 +171,7 @@
                     <div class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="image">
-                                <img src="img/featured_1.jpg" alt="">
+                                <img src="featured_1.jpg.jpg" alt="">
                                 <div class="featured-button button">
                                     <a href="#projects">Continue Reading</a>
                                 </div>
