--- a/sy8.html
+++ b/sy8.html
@@ -104,13 +104,12 @@
             </ul>
         </div>
 
-        <div class="slider">
-            <div class="Modern-Slider content-section" id="top">
-                <!-- Item -->
-                <div class="item item-1">
-                    <div class="img-fill">
-			    <div class="image" style="background-image: url("img/slide_2.jpg");"></div>
-                    <div class="image"></div>
+       <div class="slider">
+    <div class="Modern-Slider content-section" id="top">
+        <!-- Item -->
+        <div class="item item-1">
+            <div class="img-fill">
+                <div class="image" style="background-image: url('img/slide_2.jpg');"></div>
                     <div class="info">
                         <div>
                           <h1>快乐！</h1>
@@ -118,44 +117,38 @@
                               <a href="#featured">了解更多</a>
                           </div>
                         </div>
-                        </div>
                     </div>
                 </div>
-                <!-- // Item -->
-                <!-- Item -->
-                <div class="item item-2">
-                    <div class="img-fill">
-			     <div class="image" style="background-image: url("slide_2.jpg");"></div>
+        
+        <!-- Item -->
+        <div class="item item-2">
+            <div class="img-fill">
+                 <div class="image" style="background-image: url('slide_2.jpg');"></div>
                         <div class="info">
                         <div>
-                          <h1>开心！ <bdolor</h1>
+                          <h1>开心！</h1>
                           <div class="white-button button">
                               <a href="#featured">了解更多</a>
                           </div>
                         </div>
-                        </div>
                     </div>
                 </div>
-                <!-- // Item -->
-                <!-- Item -->
-                <div class="item item-3">
-                    <div class="img-fill">
-			     <div class="image" style="background-image: url("slide_1.jpg");"></div>
+   
+        <!-- Item -->
+        <div class="item item-3">
+            <div class="img-fill">
+                 <div class="image" style="background-image: url('slide_1.jpg');"></div>
                         <div class="info">
                         <div>
-                          <h1>阳光！</h1>
-
-                          
+                          <h1>阳光！</h1> 
                           <div class="white-button button">
                               <a href="#featured">了解更多</a>
                           </div>
                         </div>
-                        </div>
                     </div>
                 </div>
-                <!-- // Item -->
-            </div>
-        </div>
+    </div>
+</div>
 
 
         <div class="page-content">
