--- a/sy8.html
+++ b/sy8.html
@@ -110,7 +110,7 @@
                 <!-- Item -->
                 <div class="item item-1">
                     <div class="img-fill">
-			    <div class="image" style="background-image: url("img/slide_2.jpg");"></div>
+			    <div class="image" style="background-image: url('img/slide_2.jpg');"></div>
                     <div class="image"></div>
                     <div class="info">
                         <div>
@@ -128,7 +128,6 @@
                     <div class="img-fill">
                         <div class="image"></div>
                         <div class="info">
-                        <div>
                           <h1>开心！ <bdolor</h1>
                           <div class="white-button button">
                               <a href="#featured">了解更多</a>
@@ -145,8 +144,6 @@
                         <div class="info">
                         <div>
                           <h1>阳光！</h1>
-
-                          
                           <div class="white-button button">
                               <a href="#featured">了解更多</a>
                           </div>
