--- a/sy8.html
+++ b/sy8.html
@@ -110,7 +110,7 @@
                 <!-- Item -->
                 <div class="item item-1">
                     <div class="img-fill">
-			    <div class="image" style="background-image: url('img/slide_2.jpg');"></div>
+			    <div class="image" style="background-image: url('slide_2.jpg');"></div>
                     <div class="image"></div>
                     <div class="info">
                         <div>
